app/frontend/src/assets/css/achievements.css
h1 {
  margin: 0;
  font-size: 30px;
}
p {
  margin: 0;
  font-size: 20px;
}

.achievements-layout {
  width: calc(100% - 40px);
  max-width: 1200px;
  margin: auto;
  padding: 0 20px;
  padding-top: 50px;

  display: flex;
  flex-direction: column;
  gap: 20px;
}

.achievements {
  width: 100%;

  display: flex;
  flex-direction: column;
  gap: 30px;
}

/* Achievement list */

.achievements__container {
  flex-grow: 1;

  display: flex;
  flex-direction: column;
  gap: 20px;

  order: 2;
}

.achievement {
  display: flex;
  flex-direction: column;

  border-radius: var(--border-rounding);

  background-color: var(--background-color);
}

.achievement__container {
  padding: 10px;

  display: flex;
  flex-direction: row;
  gap: 5px;
  align-items: center;

  border-radius: var(--border-rounding);
  border: solid 2px var(--border-color);
  transition: border-color 0.3s;

  background-color: var(--background-color);
}

.achievement__container.complete {
  border-color: #5afa4b;
  box-shadow: 0 0 5px 1px #5afa4b;
}

.achievement__container.incomplete {
  border-color: #fa4b4b;
  box-shadow: 0 0 5px 1px #fa4b4b;
}

.achievement__container.neutral {
  border-color: #eeeeee;
  box-shadow: 0 0 5px 1px #eeeeee;
}

.achievement__container__info {
  flex-grow: 1;

  display: flex;
  flex-direction: column;

  position: relative;
}

.achievement__info-row {
  margin-top: 5px;
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.achievement__container__info__tags {
  height: 40px;

  padding-top: 6px;

  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 6px;

  overflow-y: visible;
  overflow-x: scroll;
}

.achievement__container__info__tags::-webkit-scrollbar {
  display: none;
}

.achievement-tag {
  height: 80%;
  padding: 0 10px 0 10px;

  border-radius: 100px;
  border: solid 2px var(--border-color);

  display: flex;
  align-items: center;

  transition: border-color 0.3s;
  background-color: var(--background-color);
}

.achievement-tag:hover {
  border-color: var(--border-color-lit);
}

.achievement__tag-description {
  width: 300px;
  padding: 5px;

  position: absolute;

  border: solid 2px var(--border-color);
  background-color: var(--background-color);

  display: none;
  z-index: 5;
  text-align: center;
}

.achievement-category {
  font-weight: bold;
  font-size: 45px;
  padding: 5px 0 5px 0;
}

.achievement__container__info__description {
  word-break: break-all;
}

.achievement__beatmap {
  width: calc(100% - 20px);
  padding: 10px;

  display: flex;
  flex-direction: row;
  gap: 5px;

  color: white;
}

.achievement__beatmap.red {
  color: #ffc0c0;
}

h1.achievement-beatmap-text, p.achievement-beatmap-text {
  color: inherit;
}

.achievement__beatmap__cover {
  height: 50px;

  border-radius: var(--border-rounding);
}

.achievement__beatmap__info {
  flex-grow: 1;

  display: flex;
  flex-direction: column;

  white-space: nowrap;
  overflow: hidden;

  color: inherit;
}

.achievement__beatmap__star-rating {
  width: 120px;

  font-size: 40px;
}

.achievement__players {
  width: calc(100% - 10px);
  padding: 5px;

  display: flex;
  flex-direction: column;
  gap: 5px;
}

.achievement__players__entry {
  height: 50px;

  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 5px;
}

.achievement__players__entry__pfp {
  height: 50px;
  border-radius: 100%;
}

.achievement__points {
  position: absolute;
  top: 0;
  right: 0;
}

.button.achievement__show-solution-btn {
  font-size: 16px;
  background-color: #d15858;
}

.button.achievement__show-solution-btn:hover {
  background-color: #ef7777;
}

.achievement__creator {
  font-size: 16px;
}

/* Progress container */

.achievements-progress {
  padding: 10px;

  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;

  order: 1;

  border-radius: var(--border-rounding);
  border: solid 2px var(--border-color);

  background-color: var(--background-color);
  transition: border-color 0.3s;
}

.achievements-progress:hover {
  border-color: var(--border-color-lit);
}

.achievements-progress__left-box {
  display: flex;
  flex-direction: column;

  border-radius: var(--border-rounding);
}

.achievements-progress__right-box {
  flex-grow: 1;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.achievements-progress__pie {
  width: 50px;
  height: 50px;

  border-radius: 50%;
  border: solid white 2px;
}

@media (max-width: 900px) {
  .achievements-progress__right-box {
    height: 115px;
    flex-direction: column;
    justify-content: space-evenly;
  }

  .achievements-progress__pie {
    width: 100px;
    height: 100px;
  }
}

@media(max-width: 500px) {
  .achievements-progress {
    flex-direction: column;
  }

  .achievements-progress__pie {
    width: 200px;
    height: 200px;
  }
}

.achievements-progress__input-row {
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.achievements-progress__button {
}

.dropdown.achievements-progress__dropdown {
  width: 150px;
}

.achievements-progress-bar {
  width: 100%;
  height: 25px;

  border: solid black 2px;
  border-radius: 25px;

  background-color: var(--background-color);
}

.achievements-progress-bar__inner {
  width: 0;
  height: 100%;

  border-radius: inherit;

  background-color: white;

  transition: width 1s;
}

.achievements-submit-btn {
  padding: 5px 10px;
  margin: 0 10px;

  border-radius: 5px;

  background-color: var(--button-color);
  transition: background-color 0.2s;
}

.achievements-submit-btn.disabled {
  background-color: var(--button-color-disabled);
}

.achievements-submit-btn:hover {
  cursor: pointer;
  background-color: var(--button-color-hover);
}

.achievements-submit-btn.disabled:hover {
  cursor: default;
  background-color: var(--button-color-disabled);
}

/* Leaderboard */

.leaderboard {
  padding: 10px;

  display: flex;
  flex-direction: column;
  gap: 10px;

  border-radius: var(--border-rounding);

  background-color: var(--background-color);
}

.leaderboard-entry {
  display: flex;
  flex-direction: row;
  align-items: center;

  border-radius: var(--border-rounding-less);

  background-color: var(--background-color);
}

.leaderboard-foreground-container {
  flex-grow: 1;

  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;

  border: solid black 2px;
  border-radius: var(--border-rounding-less);

  background: linear-gradient(
    to right,
    #438efd,
    #438efd 50px,
    var(--background-color) 50px
  );

  overflow: hidden;
  text-wrap: nowrap;
}

.leaderboard-foreground-container.n1 {
  background: linear-gradient(
    to right,
    #fcd703,
    #fcd703 50px,
    var(--background-color) 50px
  );
}

.leaderboard-foreground-container.n2 {
  background: linear-gradient(
    to right,
    #e3e3e3,
    #e3e3e3 50px,
    var(--background-color) 50px
  );
}

.leaderboard-foreground-container.n3 {
  background: linear-gradient(
    to right,
    #8a6500,
    #8a6500 50px,
    var(--background-color) 50px
  );
}

.placement-container {
  width: 20px;
  height: calc(100% - 10px);
  padding: 5px 15px;
  margin-left: -2px;

  border-radius: var(--border-rounding-less) 0 0 var(--border-rounding-less);
}

.placement-img {
  width: 40px;
  height: 40px;

  border-radius: 40px;

  object-fit: cover;
}

.placement-text {
  text-align: center;
}

.placement-text.place {
  flex-basis: 50px;
}

.placement-text.value {
  flex-basis: 80px;
}

.points {
  width: 70px;
  flex-shrink: 0;

  font-size: 25px;
  text-align: center;
}

/* Achievement navigation bar */

.achievement-nav-bar {
  padding: 10px;

  border: solid 2px var(--border-color);
  border-radius: var(--border-rounding);
  transition: border-color 0.3s;

  display: flex;
  flex-direction: column;
  gap: 10px;

  background-color: var(--background-color);
}

.achievement-nav-bar:hover {
  border-color: var(--border-color-lit);
}

.achievement-nav-bar__row {
  display: flex;
  flex-direction: row;
  gap: 15px;
}

.achievement-nav-bar__row--input {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  gap: 10px;
}

.achievement-nav-bar__row--input__group {
  display: flex;
  align-items: center;
  gap: 8px;
}

.achievement-nav-bar__row__label {
  width: 120px;
  margin: 0 10px;

  flex-shrink: 0;
}

.achievement-nav-bar__row__label.sort-type:hover {
  cursor: pointer;
  text-decoration: underline;
}

.achievement-nav-bar__row__options {
  display: flex;
  flex-grow: 1;
  column-gap: 15px;
  row-gap: 6px;
  flex-wrap: wrap;
}

.achievement-nav-bar__row__options__item {
  color: #787878;
  transition: color 0.3s;
  text-wrap: nowrap;
}

.achievement-nav-bar__row__options__item:hover {
  cursor: pointer;
  text-decoration: underline;
  color: #c6d3f9;
}

.achievement-nav-bar__row__options__item.active {
  color: #ffffff;
}

.achievement-nav-bar__row__options__item.active.on {
  color: #abffb5;
}

.achievement-nav-bar__row__options__item.active.on:hover {
  color: #c3ffca;
}

.achievement-nav-bar__row__options__item.active.off {
  color: #ffaeab;
}

.achievement-nav-bar__row__options__item.active.off:hover {
  color: #ffc0be;
}

